# virtual-enigma

./: .gitignore  LICENSE  README.md
EnigmaCore/: CMakeLists.txt
EnigmaCore/include/: helpers.h
EnigmaCore/include/enigma/: constants.h  enigma.h  plugboard.h  reflector.h  rotor.h
EnigmaCore/src/: constants.c  enigma.c  enigma.cpp  plugboard.c  plugboard.cpp  reflector.c  reflector.cpp  rotor.c  rotor.cpp
EnigmaCore/tests/: CMakeLists.txt  enigma_test.cpp  plugboard_test.cpp  reflector_test.cpp  rotor_test.cpp
EnigmaDisplay/: display.tft  jetbrains.zi  jetbrains24.zi
EnigmaEmbedded/: CMakeLists.txt  EnigmaEmbedded.ioc  mx-generated.cmake
EnigmaEmbedded/CM0PLUS/: CMakeLists.txt  STM32WL55XX_FLASH_CM0PLUS.ld  mx-generated.cmake
EnigmaEmbedded/CM0PLUS/Core/Inc/: stm32wlxx_it.h
EnigmaEmbedded/CM0PLUS/Core/Src/: main.c  stm32wlxx_it.c
EnigmaEmbedded/CM4/: CMakeLists.txt  STM32WL55XX_FLASH_CM4.ld  mx-generated.cmake
EnigmaEmbedded/CM4/Core/Src/: main.cpp  stm32wlxx_it.c
EnigmaEmbedded/Core/Inc/: enigma_core_task.h  stm32l4xx_it.h
EnigmaEmbedded/Core/Src/: enigma_core_task.c  enigma_core_task.cpp  main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
EnigmaEmbedded/Drivers/STM32L4xx_HAL_Driver/Inc/: stm32l4xx_hal_uart.h
EnigmaEmbedded/Drivers/STM32L4xx_HAL_Driver/Src/: stm32l4xx_hal_uart.c
